@@ -1,11 +1,6 @@
 FROM debian:stretch
 
-# install packages per https://github.com/UniversalMediaServer/UniversalMediaServer/wiki/Linux-install-instructions
-RUN ( apt-get update &&\
-  DEBIAN_FRONTEND=noninteractive apt-get install -y software-properties-common dcraw mediainfo mencoder mplayer openjdk-8-jre openjdk-8-jre-headless vlc-nox vlc wget &&\
-  rm -rf /var/lib/apt/lists/*)
-
-#japanese Burao Mima 04-03-2019
+#japanese T.Yazawa 03-22-2019
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN (apt-get update)
@@ -21,9 +16,9 @@ ENV LC_ALL ja_JP.UTF-8
 ENV UMS_PROFILE /opt/ums/UMS.conf
 
 # get latest release number and use that to install UMS; fail to install if version is not 8.x
-RUN (UMSVER=$(wget -q -O - https://api.github.com/repos/UniversalMediaServer/UniversalMediaServer/releases/latest | python -c "import sys, json; print json.load(sys.stdin)['name']") &&\
-  if [ "$(echo $UMSVER | awk -F '.' '{print $1}')" -ne "9" ]; then echo "Latest version number is no longer 9"; exit 1; fi &&\
-  wget "http://sourceforge.net/projects/unimediaserver/files/Official%20Releases/Linux/UMS-${UMSVER}.tgz/download" -O /opt/UMS-${UMSVER}.tgz &&\
+RUN (UMSVER=$(wget -q -O - 'https://api.github.com/repos/UniversalMediaServer/UniversalMediaServer/releases/latest' | python -c "import sys, json; print json.load(sys.stdin)['name']") &&\
+  if [ "$(echo $UMSVER | awk -F '.' '{print $1}')" -ne "9" ]; then echo "Latest version number is no longer 8"; exit 1; fi &&\
+  wget --content-disposition 'https://sourceforge.net/projects/unimediaserver/files/${UMSVER}/UMS-${UMSVER}.tgz/download' -O /opt/UMS-${UMSVER}.tgz &&\
   cd /opt &&\
   tar zxf UMS-${UMSVER}.tgz &&\
   rm UMS-${UMSVER}.tgz &&\
@@ -33,8 +28,15 @@ RUN (UMSVER=$(wget -q -O - https://api.github.com/repos/UniversalMediaServer/Uni
   useradd -u 500 -g 500 -d /opt/ums ums &&\
   chown -R ums:ums /opt/ums)
 
+#Media drive make
+
+
 USER ums
 WORKDIR /opt/ums
 EXPOSE 1900/udp 2869 5001 9001
+ENV JVM_OPTS=-Xmx512M
+CMD java $JVM_OPTS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap \
+	-DUMS_PROFILE=/profile -Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true -Djna.nosys=true \
+	-cp ums.jar net.pms.PMS
 VOLUME ["/tmp","/opt/ums/database","/opt/ums/data"]
 CMD ["/opt/ums/UMS.sh"]
